--- a/Restaurant Recommendations/View/Base.lproj/Main.storyboard
+++ b/Restaurant Recommendations/View/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="J2w-yP-p1w">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="J2w-yP-p1w">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -53,14 +53,14 @@
                                 </constraints>
                                 <state key="normal" title="Sign Up"/>
                                 <connections>
-                                    <segue destination="gEs-WX-ulu" kind="show" id="Mz8-bD-4xG"/>
+                                    <action selector="onSignUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="89G-2j-oR9"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Cs-hZ-EQj">
                                 <rect key="frame" x="100" y="473" width="38" height="30"/>
                                 <state key="normal" title="Login"/>
                                 <connections>
-                                    <action selector="onLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yWJ-fv-cPe"/>
+                                    <action selector="onLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9fi-Y9-CzA"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -79,85 +79,14 @@
                     <navigationItem key="navigationItem" id="tJO-K0-6mt"/>
                     <connections>
                         <outlet property="emailTextField" destination="pYW-Qn-FPI" id="lEK-Ph-5qu"/>
-                        <outlet property="loginButton" destination="6Cs-hZ-EQj" id="d6z-eV-SV7"/>
                         <outlet property="passwordTextField" destination="3s2-Ac-9w4" id="RSc-yD-Hfv"/>
+                        <outlet property="signUpButton" destination="wpy-Ec-61e" id="gwO-qE-UTk"/>
                         <segue destination="UCL-Op-Wg3" kind="show" identifier="loginToHome" id="EvM-hL-HVG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="66.666666666666671" y="-26.116071428571427"/>
-        </scene>
-        <!--Sign Up View Controller-->
-        <scene sceneID="3VX-AT-XG6">
-            <objects>
-                <viewController id="gEs-WX-ulu" customClass="SignUpViewController" customModule="Restaurant_Recommendations" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="PMG-4t-Fqc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Sih-2r-hQQ">
-                                <rect key="frame" x="40" y="294" width="334" height="139"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z8n-vh-at6">
-                                        <rect key="frame" x="0.0" y="0.0" width="334" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Laz-Ee-Seb">
-                                        <rect key="frame" x="0.0" y="30.5" width="334" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kgh-xd-YEA">
-                                        <rect key="frame" x="0.0" y="74.5" width="334" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cGk-9z-ASV">
-                                        <rect key="frame" x="0.0" y="105" width="334" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                </subviews>
-                            </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create your account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zt0-O3-aCl">
-                                <rect key="frame" x="40" y="220" width="177.5" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cKm-37-1EX">
-                                <rect key="frame" x="180" y="471" width="54" height="30"/>
-                                <state key="normal" title="Sign Up"/>
-                                <connections>
-                                    <action selector="onSignUp:" destination="gEs-WX-ulu" eventType="touchUpInside" id="gVA-pX-esy"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="goZ-1C-9sG"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="cKm-37-1EX" firstAttribute="top" secondItem="Sih-2r-hQQ" secondAttribute="bottom" constant="38" id="5l0-Lc-GrG"/>
-                            <constraint firstItem="Sih-2r-hQQ" firstAttribute="top" secondItem="Zt0-O3-aCl" secondAttribute="bottom" constant="50" id="6PR-1S-cd9"/>
-                            <constraint firstItem="Sih-2r-hQQ" firstAttribute="top" secondItem="goZ-1C-9sG" secondAttribute="top" constant="250" id="97M-7w-MJe"/>
-                            <constraint firstItem="Sih-2r-hQQ" firstAttribute="leading" secondItem="goZ-1C-9sG" secondAttribute="leading" constant="40" id="9Yu-PZ-pYa"/>
-                            <constraint firstItem="Zt0-O3-aCl" firstAttribute="leading" secondItem="goZ-1C-9sG" secondAttribute="leading" constant="40" id="a3C-d2-3qp"/>
-                            <constraint firstItem="goZ-1C-9sG" firstAttribute="trailing" secondItem="Sih-2r-hQQ" secondAttribute="trailing" constant="40" id="qiS-Kp-HmN"/>
-                            <constraint firstItem="cKm-37-1EX" firstAttribute="centerX" secondItem="Sih-2r-hQQ" secondAttribute="centerX" id="tGs-l1-2Om"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="RbY-wc-a3m"/>
-                    <connections>
-                        <outlet property="emailSignUpTextField" destination="Laz-Ee-Seb" id="N4k-dZ-25z"/>
-                        <outlet property="passwordSignUpTextField" destination="cGk-9z-ASV" id="L3n-Ba-DEj"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BlJ-8K-dp3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1081" y="-29"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="0um-sG-i0X">
@@ -188,7 +117,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="L26-j3-Udj">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="L26-j3-Udj" id="hYA-ZA-hoe">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -236,7 +165,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="KAz-et-YOk">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KAz-et-YOk" id="gIb-tb-Un8">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
